lepsi vypisovani, funkce.h

--- a/ukol-1/Makefile
+++ b/ukol-1/Makefile
@@ -1,6 +1,6 @@
 program=integraly
 
-HEAD=integraly.h random.h
+HEAD=integraly.h random.h funkce.h
 SRC=main.c integraly.c random.c
 OBJ=main.o integraly.o random.o
 
